// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1.test VIDEO component render 1`] = `
<div
  className="con"
>
  <div>
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      ✕
    </button>
  </div>
  <div
    className="noTrailer"
  />
</div>
`;

exports[`3.test VIDEO component trailer 1`] = `
<div
  className="con"
>
  <div>
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      ✕
    </button>
  </div>
  <iframe
    className="iframe"
    height="100%"
    src="qqq"
    title="qqq"
    width="100%"
  />
</div>
`;
